(feat): NSFW popup; (fix): Responsiveness and toolbar spacing

--- a/src/app/modules/composer/components/base/base.component.scss
+++ b/src/app/modules/composer/components/base/base.component.scss
@@ -6,13 +6,13 @@ m-composer__base {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 453px;
+  height: 390px;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease 0s !important;
 
   &.m-composer__base--withMediaPreview {
-    height: 732px;
+    height: 669px;
   }
 
   .m-composerBase__container {
@@ -63,6 +63,7 @@ m-composer__base {
       font-family: inherit;
       font-size: 16px;
       line-height: 21px;
+      min-height: 100px;
 
       &:focus {
         outline: none;
