--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -3,6 +3,7 @@ m-composer__popup {
   position: absolute;
   border-radius: 5px;
   overflow: hidden;
+  z-index: 15;
 
   &.m-composer__popup--open {
     display: block;
@@ -28,15 +29,22 @@ m-composer__popup {
   left: 0;
   display: flex;
   flex-direction: column;
-  min-height: 448px;
-  padding: 37px 37px 31px;
+  min-height: 477px;
 
   @include m-theme() {
     background: themed($m-bgColor--secondary);
   }
 
+  @media screen and (max-width: $max-mobile) {
+    min-height: initial;
+    max-height: 100vh;
+    overflow: scroll;
+  }
+
   > * {
     flex: 1;
+    display: flex;
+    flex-direction: column;
   }
 
   .m-composerPopup__close {
@@ -46,9 +54,77 @@ m-composer__popup {
     right: 31px;
     font-size: 22px;
     cursor: pointer;
+
+    @include m-theme() {
+      color: themed($m-borderColor--primary);
+    }
   }
 }
 
-.m-composer__base--withMediaPreview .m-composer__popup {
-  min-height: 477px;
+// Popups common styles
+
+.m-composerPopup__body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: -8px 0 0 0;
+  padding: 37px 0 31px;
+
+  a {
+    font-size: inherit;
+    font-weight: inherit;
+
+    @include m-theme() {
+      color: themed($m-link);
+    }
+  }
+
+  .m-composerPopup__content {
+    flex: 1;
+    padding: 0 37px;
+  }
+
+  .m-composerPopup__title {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 32px;
+
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+    }
+  }
+
+  .m-composerPopup__text,
+  .m-composerPopup__smallNote {
+    font-weight: normal;
+
+    @include m-theme() {
+      color: themed($m-textColor--secondary);
+    }
+  }
+
+  .m-composerPopup__text {
+    font-size: 16px;
+    line-height: 21px;
+  }
+
+  .m-composerPopup__smallNote {
+    font-size: 14px;
+    line-height: 23px;
+  }
+
+  .m-composerPopup__action {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 34px 37px 0;
+    border-top: 1px solid;
+
+    @include m-theme() {
+      border-color: themed($m-borderColor--primary);
+    }
+  }
 }
